Added FAQs and updated through Lesson 8

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -54,20 +54,29 @@ This page includes schedule for the Spring 2026 semester, along with all the ass
 
 ## Block 2: Data Wrangling and Visualization
 
-+--------+-------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+---------------------------+
-| Lesson | Topic       | BEFORE Class                                                                                                                                                                                                                                          | AFTER Class | Graded Events (due dates) |
-+========+=============+=======================================================================================================================================================================================================================================================+=============+===========================+
-| 8      | Data Basics | -   READ:                                                                                                                                                                                                                                             | -   GPset 8 |                           |
-|        |             |                                                                                                                                                                                                                                                       |             |                           |
-|        |             |     -   Chapter 1 Hello data from *Introduction to Modern Stats* *(2e)*                                                                                                                                                                               |             |                           |
-|        |             |                                                                                                                                                                                                                                                       |             |                           |
-|        |             |     -   Chapter 5 Exploring numerical data from *Introduction to Modern Stats* *(2e)*                                                                                                                                                                 |             |                           |
-|        |             |                                                                                                                                                                                                                                                       |             |                           |
-|        |             |     -   ***Note: You may not be able to access the web-native version of Intro to Modern Stats (2nd edition) on MissionNet WiFi. Please use the provided PDF of the textbook (in Teams) or refer to the PDF of the assigned reading in NotebookLM.*** |             |                           |
-|        |             |                                                                                                                                                                                                                                                       |             |                           |
-|        |             | -   [Reading Guide for Lesson 8](https://notebooklm.google.com/notebook/6f92eaad-f39d-44fa-802a-fc4496e533ea){target="_blank"}                                                                                                                        |             |                           |
-+--------+-------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+---------------------------+
-| 9      | GR1         | Study! Practice!                                                                                                                                                                                                                                      | Relax!      |                           |
-|        |             |                                                                                                                                                                                                                                                       |             |                           |
-|        |             | -   GR1 will take place on Thursday 29 January (M9) during the common GR time, starting at 0630                                                                                                                                                       |             |                           |
-+--------+-------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+---------------------------+
++--------+-----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+---------------------------+
+| Lesson | Topic                       | BEFORE Class                                                                                                                                                                                                                                          | AFTER Class  | Graded Events (due dates) |
++========+=============================+=======================================================================================================================================================================================================================================================+==============+===========================+
+| 8      | Data Basics                 | -   READ:                                                                                                                                                                                                                                             | -   GPset 8  |                           |
+|        |                             |                                                                                                                                                                                                                                                       |              |                           |
+|        |                             |     -   Chapter 1 Hello data from *Introduction to Modern Stats* *(2e)*                                                                                                                                                                               |              |                           |
+|        |                             |                                                                                                                                                                                                                                                       |              |                           |
+|        |                             |     -   Chapter 5 Exploring numerical data from *Introduction to Modern Stats* *(2e)*                                                                                                                                                                 |              |                           |
+|        |                             |                                                                                                                                                                                                                                                       |              |                           |
+|        |                             |     -   ***Note: You may not be able to access the web-native version of Intro to Modern Stats (2nd edition) on MissionNet WiFi. Please use the provided PDF of the textbook (in Teams) or refer to the PDF of the assigned reading in NotebookLM.*** |              |                           |
+|        |                             |                                                                                                                                                                                                                                                       |              |                           |
+|        |                             | -   [Reading Guide for Lesson 8](https://notebooklm.google.com/notebook/6f92eaad-f39d-44fa-802a-fc4496e533ea){target="_blank"}                                                                                                                        |              |                           |
++--------+-----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+---------------------------+
+| 9      | GR1                         | Study! Practice!                                                                                                                                                                                                                                      | Relax!       |                           |
+|        |                             |                                                                                                                                                                                                                                                       |              |                           |
+|        |                             | -   GR1 will take place on Thursday 29 January (M9) during the common GR time, starting at 0630                                                                                                                                                       |              |                           |
+|        |                             | -   There will be no regular class on M9/T9                                                                                                                                                                                                           |              |                           |
++--------+-----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+---------------------------+
+| 10     | Data Collection and Studies | -   READ: Chapter 2 Study design from *Introduction to Modern Stats (2e)*                                                                                                                                                                             | -   GPset 10 |                           |
+|        |                             |                                                                                                                                                                                                                                                       |              |                           |
+|        |                             | -   [Reading Guide for Lesson 10](https://notebooklm.google.com/notebook/725f1277-edc9-4935-800d-01e8d6eb4b25){target="_blank"}                                                                                                                       |              |                           |
++--------+-----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+---------------------------+
+| 11     | Tidy Data                   |                                                                                                                                                                                                                                                       | -   GPset 11 | -   Project Group Task #1 |
++--------+-----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+---------------------------+
+| 12     | Data Wrangling              |                                                                                                                                                                                                                                                       | -   GPset 12 | -   HW 3                  |
++--------+-----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+---------------------------+
