Updated schedule through Lesson 12.

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -86,5 +86,7 @@ This page includes schedule for the Spring 2026 semester, along with all the ass
 |        |                             |                                                                                                                                                                                                                                                                                                                           |              |                           |
 |        |                             | -   [Reading Guide for Lesson 11](https://notebooklm.google.com/notebook/c15d1e56-d2a1-42f9-9cc3-174b52c7ebe6){target="_blank"}                                                                                                                                                                                           |              |                           |
 +--------+-----------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+---------------------------+
-| 12     | Data Wrangling              |                                                                                                                                                                                                                                                                                                                           | -   GPset 12 | -   HW 3                  |
+| 12     | Data Wrangling              | -   READ: [Chapter 3 Data Wrangling](https://moderndive.com/v2/wrangling.html){target="_blank"} from *Modern Dive*                                                                                                                                                                                                        | -   GPset 12 | -   HW 3                  |
+|        |                             |                                                                                                                                                                                                                                                                                                                           |              |                           |
+|        |                             | -   [Reading Guide for Lesson 12](https://notebooklm.google.com/notebook/f3226153-1b7b-4766-af0f-bd472099e7fb){target="_blank"}                                                                                                                                                                                           |              |                           |
 +--------+-----------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+---------------------------+
