Updated schedule with GR1 and GR2 study guide links

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -69,6 +69,7 @@ This page includes schedule for the Spring 2026 semester, along with all the ass
 +--------+------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------+--------------------------------+
 | 9      | GR1                                | Study! Practice!                                                                                                                                                                                                                                                                                                                                               | Relax!                             |                                |
 |        |                                    |                                                                                                                                                                                                                                                                                                                                                                |                                    |                                |
+|        |                                    | -   [Block 1 NotebookLM Study Guide](https://notebooklm.google.com/notebook/8187bc92-1afc-472d-8448-d1c29558174b){target="_blank"}                                                                                                                                                                                                                             |                                    |                                |
 |        |                                    | -   GR1 will take place on Thursday 29 January (M9) during the common GR time, starting at 0630                                                                                                                                                                                                                                                                |                                    |                                |
 |        |                                    | -   There will be no regular class on M9/T9                                                                                                                                                                                                                                                                                                                    |                                    |                                |
 +--------+------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------+--------------------------------+
@@ -158,6 +159,7 @@ This page includes schedule for the Spring 2026 semester, along with all the ass
 +--------+------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------+--------------------------------+
 | 18     | GR2                                | Study! Practice!                                                                                                                                                                                                                                                                                                                                               | Relax!                             |                                |
 |        |                                    |                                                                                                                                                                                                                                                                                                                                                                |                                    |                                |
+|        |                                    | -   [Block 2 NotebookLM Study Guide](https://notebooklm.google.com/notebook/9c0bbb0e-1b74-42d7-8a4e-d84fe82ceae5){target="_blank"}                                                                                                                                                                                                                             |                                    |                                |
 |        |                                    | -   GR2 will take place on Thursday 26 February (T18) during the common GR time, starting at 0630                                                                                                                                                                                                                                                              |                                    |                                |
 |        |                                    | -   There will be no regular class on M18/T18                                                                                                                                                                                                                                                                                                                  |                                    |                                |
 +--------+------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------+--------------------------------+
