Updated through Lesson 22

--- a/schedule.qmd
+++ b/schedule.qmd
@@ -163,3 +163,49 @@ This page includes schedule for the Spring 2026 semester, along with all the ass
 |        |                                    | -   GR2 will take place on Thursday 26 February (T18) during the common GR time, starting at 0630                                                                                                                                                                                                                                                              |                                    |                                |
 |        |                                    | -   There will be no regular class on M18/T18                                                                                                                                                                                                                                                                                                                  |                                    |                                |
 +--------+------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------+--------------------------------+
+
+## Block 3: Hypothesis Testing and Confidence Intervals
+
++--------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+-----------------------------------------------------------------------------------------+
+| Lesson | Topic                             | BEFORE Class                                                                                                                                                   | AFTER Class  | Graded Events (due dates)                                                               |
++========+===================================+================================================================================================================================================================+==============+=========================================================================================+
+| 19     | Sampling Framework                | -   READ: [Chapter 7 Sampling from *Modern Dive*](https://moderndive.com/v2/sampling.html) - skip Section 7.3 but read the rest of the chapter                 | -   GPset 19 | -   [Course Participation form](https://forms.office.com/r/NMdNJz5iee){target="_blank"} |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   | -   [Reading Guide for Lesson 19](https://notebooklm.google.com/notebook/90e79303-bb46-482e-a2fb-a8f5e4c1d320){target="_blank"}                                |              |                                                                                         |
++--------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+-----------------------------------------------------------------------------------------+
+| 20     | Bootstrap and Resampling          | -   READ:                                                                                                                                                      | -   GPset 20 |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |     -   [Chapter 8 Estimation, Confidence Intervals and Bootstrapping](https://moderndive.com/v2/confidence-intervals.html){target="_blank"} from *ModernDive* |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |         -   Read the start of the chapter through the end of Section 8.1.1                                                                                     |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |         -   Read Section 8.2 through the end of Section 8.2.1                                                                                                  |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |     -   Chapter 12 Confidence intervals with bootstrapping from *Introduction to Modern Statistics (2e)*                                                       |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |         -   Read the start of the chapter through the end of Section 12.1                                                                                      |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   | -   [Reading Guide for Lesson 20](https://notebooklm.google.com/notebook/dbe1bbf8-4bbd-43ec-a956-a51d8cbf8c2c){target="_blank"}                                |              |                                                                                         |
++--------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+-----------------------------------------------------------------------------------------+
+| 21     | Confidence Intervals              | -   READ:                                                                                                                                                      |              | -   Project Group Task #2                                                               |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |     -   [Chapter 8 Estimation, Confidence Intervals and Bootstrapping](https://moderndive.com/v2/confidence-intervals.html){target="_blank"} from *ModernDive* |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |         -   Sections 8.1.2 and 8.1.3                                                                                                                           |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |         -   Sections 8.2.2, 8.2.3, and 8.2.4                                                                                                                   |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |     -   Chapter 12 Confidence intervals with bootstrapping from *Introduction to Modern Statistics (2e)*                                                       |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |         -   Sections 12.2 through 12.4                                                                                                                         |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   | -   [Reading Guide for Lesson 21](https://notebooklm.google.com/notebook/2295503e-94b5-48ae-a2e7-ef6559c055df){target="_blank"}                                |              |                                                                                         |
++--------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+-----------------------------------------------------------------------------------------+
+| 22     | Interpreting Confidence Intervals | -   READ:                                                                                                                                                      | -   GPset 22 | -   HW 5                                                                                |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |     -   [Chapter 8 Estimation, Confidence Intervals and Bootstrapping](https://moderndive.com/v2/confidence-intervals.html){target="_blank"} from *ModernDive* |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   |         -   Section 8.1.5 and Section 8.4 through the end of the chapter                                                                                       |              |                                                                                         |
+|        |                                   |                                                                                                                                                                |              |                                                                                         |
+|        |                                   | -   [Reading Guide for Lesson 22](https://notebooklm.google.com/notebook/cab5ceee-5461-4999-888d-5af5993dc4cd){target="_blank"}                                |              |                                                                                         |
++--------+-----------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------+-----------------------------------------------------------------------------------------+
